# FHDeX

./: .gitignore  LEGAL  LICENSE  README.md  main.cpp
exec/: GNUmakefile  stats_unbiased.cpp
exec/lib_hydro/asdf/: CMakeLists.txt  inputs_3d_test  main.cpp
exec/lib_hydro/cmake/: CMakeLists.txt  build.fish  build.macbert.fish  build.nmpb.fish
exec/lib_hydro/cmake/test/: CMakeLists.txt  build.fish  build.nmpb.fish  hello.cpp
exec/lib_hydro/demo/: CMakeLists.txt  WritePlotFile.cpp  build.fish  build.nmpb.fish  inputs_3d_test  main.cpp  main_driver.H  main_driver.cpp
python/: convertSeries  write_pview_file.py
src_MFsurfchem/: MFsurfchem_functions.H  MFsurfchem_functions.cpp  MFsurfchem_namespace.H  Make.package
src_analysis/: Make.package  StructFact.H  StructFact.cpp  StructFact_F.H  TurbSpectra.H  TurbSpectra.cpp  TurbSpectra_distributed.H  TurbSpectra_distributed.cpp  TurbSpectra_heffte.H  TurbSpectra_heffte.cpp  TurbSpectra_single.H  TurbSpectra_single.cpp  analysis_functions_F.H
src_chem/: AmrCoreAdv.H  AmrCoreAdv.cpp  AmrCoreAdv_F.H  CMakeLists.txt  Make.package  Prob.f90  README  face_velocity_2d.f90  face_velocity_3d.f90  main.cpp  ptsource_fill_2d.f90  ptsource_fill_3d.f90  slope_3d.f90
src_chemistry/: CLE_EM.cpp  CLE_RK3.cpp  Make.package  chemistry_functions.H  chemistry_functions.cpp  chemistry_namespace.H  chemistry_namespace_declarations.H
src_common/: BCPhysToMath.cpp  ComputeAverages.cpp  ComputeBasicStats.cpp  ComputeDivAndGrad.cpp  ConvertStag.cpp  Debug.cpp  FHD.H  FHD.cpp  FindCoords.cpp  FindNodalValues.cpp  InhomogeneousBCVal.H  InterpCoarsen.cpp  Make.package  MuliFABFillRandom.cpp  MultiFABFillRandom.cpp  MultiFABPhysBC.H  MultiFABPhysBC.cpp  MultiFabPhysBC.cpp  NormInnerProduct.cpp  README_FILLROUTINES  RotateFlattenedMF.cpp  SqrtMF.cpp  TimeStep.cpp  common.H  common_F.H  common_defaults.H  common_functions.H  common_functions.cpp  common_functions.cpp~  common_functions_F.H  common_namelist.F90  common_namespace.H  common_namespace_declarations.H  common_params.F90  common_params.H  common_params.f90  common_params_F.H  common_params_declarations.H  common_params_defaults.H  common_params_queries.H  (+7 more)
src_compressible/: .conservedPrimitiveConversions.cpp.swp  Make.package  boundary.cpp  checkpoint.cpp  compressible_functions.H  compressible_functions.cpp  compressible_functions_F.H  compressible_namespace.H  compressible_namespace_declarations.H  conservedPrimitiveConversions.cpp  flux.cpp  main_driver.cpp  membrane.cpp  ssa.cpp  stats.cpp  timeStep.cpp  transCoeffs.cpp  writePlotFile.cpp
src_compressible_stag/: Checkpoint.cpp  DeriveVelProp.cpp  Make.package  TurbForcingComp.H  TurbForcingComp.cpp  boundaryStag.cpp  compressible_functions_stag.H  compressible_functions_stag.cpp  compressible_namespace.H  conservedPrimitiveConversionsStag.cpp  fluxStag.cpp  main_driver.cpp  membraneStag.cpp  reservoirStag.cpp  reservoirStag_K.H  statsStag.cpp  timeStepStag.cpp  writePlotFileStag.cpp
src_deankow/: main.cpp  myfunc.H  myfunc.cpp  mykernel.H
src_electrostatic/: Make.package  electrostatic.H  electrostatic.cpp
src_geometry/: Make.package  MakeDSMC.package  paramPlane.H  paramPlane.cpp  paramplane_functions_F.H  paramplane_functions_K.H  paramplane_phonon_functions_K.H
src_gmres/: ApplyMatrix.cpp  ApplyPrecon.cpp  GMRES.H  GMRES.cpp  MacProj.H  MacProj.cpp  Make.package  NormInnerProduct.cpp  Precon.H  Precon.cpp  StagApplyOp.cpp  StagApplyOpWeighted.cpp  StagExpSolver.cpp  StagInnerProduct.cpp  StagMGSolver.H  StagMGSolver.cpp  Utility.cpp  gmres_functions.H  gmres_functions.cpp  gmres_functions_F.H  gmres_namelist.F90  gmres_namespace.H  gmres_params.f90  gmres_params_F.H  gmres_params_declarations.H  gmres_params_defaults.H  gmres_params_queries.H
src_hydro/: AddMFluctuations.cpp  BDS.cpp  ConvertMToUmac.cpp  HydroBCs.cpp  MacProj_hydro.cpp  Make.package  MkAdvMFluxdiv.cpp  MkAdvSFluxdiv.cpp  MkDiffusiveMFluxdiv.cpp  StochMFlux.H  StochMFlux.cpp  StochMomFlux.H  StochMomFlux.cpp  StochMomFlux.cpp~  StructFact.H  StructFact.cpp  Vorticity.cpp  advance.cpp  advance_timestep_inertial.cpp  boundary.cpp  hydro.H  hydroAMR.H  hydroAMR.cpp  hydro_functions.H  hydro_functions_F.H  main_driver.cpp
src_immersed-boundary/: IBCore.H  IBCore.cpp  IBGMRES.cpp  IBMarkerContainer.H  IBMarkerContainer.cpp  IBMarkerContainerBase.H  IBMarkerContainerBaseI.H  IBMultiBlobContainer.H  IBMultiBlobContainer.cpp  IBParticleContainer.H  IBParticleContainer.cpp  IBParticleInfo.H  MFUtil.H  Make.package  MakeBase.package  ib_functions.H  ib_functions.cpp  ib_functions_F.H  immbdy_namespace.H  immbdy_namespace_declarations.H  kernel_functions_K.H
src_low-density/: Make.package  boundary.cpp  compressible_functions.H  compressible_functions_F.H  conservedPrimitiveConversions.cpp  flux.cpp  membrane.cpp  stats.cpp  timeStep.cpp  transCoeffs.cpp
src_mui/: bin.h  chrono_sampler_exact.h  chrono_sampler_gauss.h  chrono_sampler_mean.h  chrono_sampler_null.h  chrono_sampler_sum.h  comm.h  comm_factory.h  comm_mpi.h  comm_mpi_nxn.h  comm_mpi_smart.h  comm_tcp.h  config.h  dim.h  dynstorage.h  exception.h  geometry.h  lib_dispatcher.h  lib_factory.h  lib_mpi_hepler.h  lib_mpi_split.h  lib_singleton.h  lib_uri.h  message.h  mui.h  point.h  reader.h  reader_variable.h  sampler.h  sampler_exact.h  sampler_gauss.h  sampler_kmc_fhd.h  sampler_mov_avg.h  sampler_nn.h  sampler_null.h  sampler_pseudo_n2_linear.h  sampler_pseudo_nn.h  span.h  spatial_storage.h  stream.h  (+8 more)
src_multispec/: .MassFluxUtil.cpp.swp  .multispec_functions.H.swp  ComputeDivReversibleStress.cpp  ComputeDivReversibleStress.cpp~  ComputeMassFluxdiv.cpp  ComputeMixtureProperties.cpp  ComputeMixtureProperties.cpp~  CorrectionFlux.cpp  DiffusiveMassFluxdiv.cpp  ElectroDiffusiveMassFluxdiv.cpp  FluidCharge.cpp  GradPressureCorrection.cpp  InitialProjection.cpp  Make.package  MassFluxUtil.cpp  MatvecMul.cpp  MkDiffusiveMFluxdiv.cpp  MultiFabPhysBC_FH.cpp  PressureJump.cpp  ProjectOntoEOS.cpp  RhoUtil.cpp  StochMassFlux.H  StochMassFlux.cpp  multispec_functions.H  multispec_functions.cpp  (+3 more)
(+3364 files in other folders)
